style(menu): reduce sidebar font-size to 13px and prevent text wrapping

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -23,7 +23,7 @@
 
 button.nav-link {
   background-color: var(--sidebar-bg);
-  font-size: 14px;
+  font-size: 13px;
   border: none;
   padding-top: 14px;
   padding-bottom: 14px;
@@ -40,6 +40,7 @@ button.nav-link:hover {
   text-decoration: underline;
   padding-right: 0;
   margin-right: 0;
+  white-space: nowrap;
 }
 
 .menu-item {
@@ -49,7 +50,7 @@ button.nav-link:hover {
   align-items: center;
   font-family: 'Roboto', 'Noto', sans-serif;
   -webkit-font-smoothing: antialiased;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 24px;
   position: relative;
